...
        
        headView.backgroundColor = .Accent
        view.addSubview(headView)
        
//        skipTextView.textColor = .whiteColor()
//        skipTextView.textAlignment = .Right
//        skipTextView.text = "Try app without login"
//        skipTextView.font = .displayOfSize(14, withType: .Thin)
//        skipTextView.addGestureRecognizer(UITapGestureRecognizer(target: self, action: "showApp"))
//        skipTextView.userInteractionEnabled = true
//        headView.addSubview(skipTextView)
        
        backTextView.textColor = .whiteColor()
        backTextView.textAlignment = .Right
        backTextView.text = "Back"
        backTextView.font = .displayOfSize(14, withType: .Thin)
        backTextView.addGestureRecognizer(UITapGestureRecognizer(target: self, action: "cancel"))
        backTextView.userInteractionEnabled = true
        headView.addSubview(backTextView)
        
//        logoView.text = String.iconWithName(.LogoText)
...
