...
        
        contentView.backgroundColor = .blackColor()
        
        previewImageView.contentMode = .ScaleAspectFill
        previewImageView.clipsToBounds = true
        previewImageView.userInteractionEnabled = true
        previewImageView.accessibilityIdentifier = "preview-image"
        previewImageView.isAccessibilityElement = true
        previewImageView.addGestureRecognizer(UITapGestureRecognizer(target: self, action: "pushDetails"))
        contentView.addSubview(previewImageView)
        
        previewImageView.addSubview(blurView)
        
...
